--- a/application/asset/sass/_screen.scss
+++ b/application/asset/sass/_screen.scss
@@ -2825,20 +2825,20 @@ body.sidebar-open #content {
         width: rhythm(4, .75 * $base-font-size);
         margin-right: rhythm(.5, .75 * $base-font-size);
         float: left;
-        word-break: break-word;
+        word-wrap: break-word;
     }
 
     #attachment-options .item-thumbnail ~ #attachment-item-select {
         font-size: .75 * $base-font-size;
         display: block;
         width: calc(100% - #{rhythm(4.5, .75 * $base-font-size)});
-        word-break: break-word;
+        word-wrap: break-word;
     }
 
     #attachment-options h3 {
         border-color: $gray-on-white;
         @include trailing-border(3px, .25, 1.25 * $base-font-size, solid);
-        word-break: break-word;
+        word-wrap: break-word;
     }
 
     #attachment-options .media-list {
